--- a/docs/developer/advanced/existing_app_tutorial.mdx
+++ b/docs/developer/advanced/existing_app_tutorial.mdx
@@ -69,7 +69,7 @@ The different parts of Spree (API, Admin) will be mounted there as well, eg. `ht
 
 ### Use your existing authentication
 
-[Spree Auth Devise](https://github.com/spree/spree\_auth\_devise) is the default authentication that comes with Spree but you can swap it for your own, please [follow this guide](../customization/authentication.md)
+[Spree Auth Devise](https://github.com/spree/spree\_auth\_devise) is the default authentication that comes with Spree but you can swap it for your own, please [follow this guide](../customization/authentication)
 
 ### Hello, Spree Commerce
 
