--- a/docs/developer/core-concepts/internals/calculators.mdx
+++ b/docs/developer/core-concepts/internals/calculators.mdx
@@ -24,11 +24,11 @@ Calculators link to a `calculable` object, which are typically one of `Spree::Sh
 
 ## Available Calculators
 
-The following are descriptions of the currently available calculators in Spree. If you would like to add your own, please see the [Creating a New Calculator](calculators.md#creating-a-new-calculator) section.
+The following are descriptions of the currently available calculators in Spree. If you would like to add your own, please see the [Creating a New Calculator](calculators#creating-a-new-calculator) section.
 
 ### Default Tax
 
-For information about this calculator, please read the [Taxation](taxation.md) guide.
+For information about this calculator, please read the [Taxation](taxation) guide.
 
 ### Flat Percent Per Item Total
 
@@ -117,7 +117,7 @@ meaning the calculator will compute an amount of 15.
 
 ### Percent Per Item
 
-The Percent Per Item calculator works in a near-identical fashion to the [Per Item Calculator](calculators.md#per-item), with the exception that rather than providing a flat-rate per item, it is a percentage.
+The Percent Per Item calculator works in a near-identical fashion to the [Per Item Calculator](calculators#per-item), with the exception that rather than providing a flat-rate per item, it is a percentage.
 
 Assuming a calculator amount of 10% and an order such as this:
 
