--- a/docs/developer/core-concepts/internals/preferences.mdx
+++ b/docs/developer/core-concepts/internals/preferences.mdx
@@ -22,7 +22,7 @@ As another example, you might want to add preferences for users to manage their 
 
 Extensions may add to the Spree General Settings or create their own namespaced preferences.
 
-The first several sections of this guide describe preferences in a very general way. If you're just interested in making modifications to the existing preferences, you can skip ahead to the [Configuring Spree Preferences section](preferences.md#configuring-spree-preferences). If you would like a more in-depth understanding of the underlying concepts used by the preference system, please read on.
+The first several sections of this guide describe preferences in a very general way. If you're just interested in making modifications to the existing preferences, you can skip ahead to the [Configuring Spree Preferences section](preferences#configuring-spree-preferences). If you would like a more in-depth understanding of the underlying concepts used by the preference system, please read on.
 
 ### Motivation
 
@@ -281,7 +281,7 @@ In the above configuration file, three preferences have been defined:
 
 It is recommended to create the configuration file in the `lib/` directory.
 
-Extensions can also define site-wide preferences. For more information on using preferences like this with extensions, check out the [Extensions Tutorial](../extensions/extensions.md).
+Extensions can also define site-wide preferences. For more information on using preferences like this with extensions, check out the [Extensions Tutorial](../extensions/extensions).
 
 ### Configuring Site-Wide Preferences
 
