--- a/docs/developer/customization/api_v2.mdx
+++ b/docs/developer/customization/api_v2.mdx
@@ -15,12 +15,12 @@ description: >-
 
 Spree uses J[SON API serializers](https://github.com/jsonapi-serializer/jsonapi-serializer) to represent data returned by API endpoints.&#x20;
 
-You can easily swap OOTB Spree serializers with your own thanks to [Spree Dependencies](dependencies.md).&#x20;
+You can easily swap OOTB Spree serializers with your own thanks to [Spree Dependencies](dependencies).&#x20;
 
 #### Adding custom attributes
 
 <Note>
-Generally it's recommended to use [Properties](../internals/products.md#product-properties) and [OptionTypes/Option Values](../internals/products.md#option-types-and-option-values) for custom attributes and not to modify the Spree database schema
+Generally it's recommended to use [Properties](../internals/products#product-properties) and [OptionTypes/Option Values](../internals/products#option-types-and-option-values) for custom attributes and not to modify the Spree database schema
 </Note>
 
 Let's say you want to customize the Storefront API's [Product serializer](https://github.com/spree/spree/blob/master/api/app/serializers/spree/v2/storefront/product\_serializer.rb) to include you custom database column `my_newcustom_attribute` that you've added to the `spree_products` database table.
