--- a/docs/developer/customization/i18n.mdx
+++ b/docs/developer/customization/i18n.mdx
@@ -12,13 +12,13 @@ description: >-
 
 ## Default Locale
 
-Each [**Store**](../internals/stores.md) has their own `default_locale` attribute. Alongside that, you can also set `supported_locales` which will enable multi-language capabilities for that Store.
+Each [**Store**](../internals/stores) has their own `default_locale` attribute. Alongside that, you can also set `supported_locales` which will enable multi-language capabilities for that Store.
 
 For locales, we use symbols such as `en`,`es-MX` etc - full list of supported locales is available in the [Spree I18n GitHub repository](https://github.com/spree-contrib/spree\_i18n/tree/master/config/locales).
 
 ## Default Currency
 
-Each [**Store**](../internals/stores.md) has their own `default_currency` attribute. Alongside that, you can also set  `supported_currencies` which will enable multi-currency capabilities for that Store.
+Each [**Store**](../internals/stores) has their own `default_currency` attribute. Alongside that, you can also set  `supported_currencies` which will enable multi-currency capabilities for that Store.
 
 For currencies, we use [ISO 4217](https://en.wikipedia.org/wiki/ISO\_4217) symbols, eg. `USD` , `CAD`, `EUR`
 
