--- a/docs/developer/customization/logic.mdx
+++ b/docs/developer/customization/logic.mdx
@@ -8,7 +8,7 @@ order: 4
 
 ## Overview
 
-It is highly recommended to use [Dependencies](dependencies.md) and [Extensions](../extensions/extensions.md) first rather than to apply patches to Spree Core. Still if you don't find those to be efficient you can pretty much overwrite any part of Spree following this guide.
+It is highly recommended to use [Dependencies](dependencies) and [Extensions](../extensions/extensions) first rather than to apply patches to Spree Core. Still if you don't find those to be efficient you can pretty much overwrite any part of Spree following this guide.
 
 ## Extending Classes
 
