--- a/docs/developer/getting-started/installation.mdx
+++ b/docs/developer/getting-started/installation.mdx
@@ -2,7 +2,7 @@
 
 Before proceeding make sure you have [Ruby](https://www.ruby-lang.org/en/) installed on your system. This is fairly straightforward but differs depending on which operating system you use.
 
-If you would like to add Spree to your existing Ruby on Rails application, please [follow this guide instead](../advanced/existing\_app\_tutorial.md) (for advanced users).
+If you would like to add Spree to your existing Ruby on Rails application, please [follow this guide instead](../advanced/existing\_app\_tutorial) (for advanced users).
 
 ### Windows
 
