--- a/docs/developer/security/api.mdx
+++ b/docs/developer/security/api.mdx
@@ -8,7 +8,7 @@ order: 3
 
 <Warning>
 This section is only applicatable to API v1
-</Note>
+</Warning>
 
 The REST API behaves slightly differently than a standard user. First, an admin has to create the access key before any user can query the REST API. This includes generating the key for the admin him/herself. This is not the case if `Spree::Api::Config[:requires_authentication]` is set to `false`.
 
