--- a/docs/developer/security/authentication_and_authorization.mdx
+++ b/docs/developer/security/authentication_and_authorization.mdx
@@ -29,5 +29,5 @@ These configurations represent a reasonable starting point for a typical e-comme
 
 ## Authorization
 
-Please refer to [Permissions Customization guide](../customization/permissions.md) for more information.
+Please refer to [Permissions Customization guide](../customization/permissions) for more information.
 
