--- a/docs/developer/storefronts/vue-storefront.mdx
+++ b/docs/developer/storefronts/vue-storefront.mdx
@@ -12,31 +12,31 @@ See the live demo: [https://vuestorefront-spree.upsidelab.io/](https://vuestoref
 
 1. Clone the git repository:
 
-```
+```bash
 git clone https://github.com/upsidelab/vue-storefront-spree.git
 ```
 
 2\. Install the required dependencies:
 
-```
+```bash
 yarn install
 ```
 
 3\. Set the backend URL via env variable:
 
-```
+```bash
 export BACKEND_URL=https://localhost:4000
 ```
 
 4\. (optional) Then you can verify if everything works properly by building all three projects:
 
-```
+```bash
 yarn build
 ```
 
 5\. If everything is built properly, you can start working on your new frontend with:
 
-```
+```bash
 yarn dev
 ```
 
