--- a/docs/developer/upgrades/upgrades/4.4-to-4.5.mdx
+++ b/docs/developer/upgrades/upgrades/4.4-to-4.5.mdx
@@ -6,8 +6,8 @@ description: This guide covers upgrading a 4.4 Spree application to Spree 4.5.
 
 **If you're on an older version than 4.4 please follow previous upgrade guides and perform those upgrades incrementally**, eg.
 
-1. [upgrade 4.1 to 4.2](four-dot-one-to-four-dot-two.md)
-2. [upgrade 4.2 to 4.3](fout-dot-two-to-four-dot-three.md)
+1. [upgrade 4.1 to 4.2](four-dot-one-to-four-dot-two)
+2. [upgrade 4.2 to 4.3](fout-dot-two-to-four-dot-three)
 3. [upgrade 4.3 to 4.4](https://dev-docs.spreecommerce.org/upgrades/upgrades/4.3-to-4.4)
 
 This is the safest and recommended method.
