--- a/docs/developer/upgrades/upgrades/four-dot-oh-to-four-dot-one.mdx
+++ b/docs/developer/upgrades/upgrades/four-dot-oh-to-four-dot-one.mdx
@@ -70,7 +70,7 @@ To replace your current frontend with the new Spree UI follow these steps:
 3. Next, you will need to copy over two files:
    * [spree\_storefront.rb](https://raw.githubusercontent.com/spree/spree/master/core/lib/generators/spree/install/templates/config/initializers/spree_storefront.rb) to `config/initializers/spree_storefront.rb`
    * [spree\_storefront.yml](https://raw.githubusercontent.com/spree/spree/master/core/lib/generators/spree/install/templates/config/spree_storefront.yml) to `config/spree_storefront.yml`
-4. If you overwrote any `spree_frontend` [controllers](https://github.com/spree/spree/tree/master/frontend/app/controllers) you will need to either remove your local copies or move your custom logic to [decorators](../../customization/logic.md#extending-controllers)
+4. If you overwrote any `spree_frontend` [controllers](https://github.com/spree/spree/tree/master/frontend/app/controllers) you will need to either remove your local copies or move your custom logic to [decorators](../../customization/logic#extending-controllers)
 5. The same goes for [helpers](https://github.com/spree/spree/tree/master/frontend/app/helpers/spree)
 6. You will also need to remove this line:
 
