--- a/docs/developer/upgrades/upgrades/four-dot-one-to-four-dot-two.mdx
+++ b/docs/developer/upgrades/upgrades/four-dot-one-to-four-dot-two.mdx
@@ -45,7 +45,7 @@ If you used `spree_i18n` gem before please remove any `SpreeI18n::Config`referen
 
 ## \(Optional\) Add `deface` gem \(optional\)
 
-If you used [Deface overrides](../../advanced/deface_overrides_tutorial.md#organizing-overrides) you will need to include `deface` in your `Gemfile` as it was removed from Spree / Spree Auth Devise / Spree Gateway dependencies.
+If you used [Deface overrides](../../advanced/deface_overrides_tutorial#organizing-overrides) you will need to include `deface` in your `Gemfile` as it was removed from Spree / Spree Auth Devise / Spree Gateway dependencies.
 
 Simply add it to your `Gemfile`:
 
