--- a/docs/developer/upgrades/upgrades/three-dot-two-to-three-dot-three.mdx
+++ b/docs/developer/upgrades/upgrades/three-dot-two-to-three-dot-three.mdx
@@ -81,7 +81,7 @@ gem 'aws-sdk', '>= 2.0'
 
 and run `bundle update aws-sdk`
 
-In your paperclip configuration, you also need to specify `s3_region` attribute eg. [https://github.com/spree/spree/blame/master/guides/content/developer/customization/s3\_storage.md\#L27](https://github.com/spree/spree/blame/master/guides/content/developer/customization/s3_storage.md#L27)
+In your paperclip configuration, you also need to specify `s3_region` attribute eg. [https://github.com/spree/spree/blame/master/guides/content/developer/customization/s3\_storage.md\#L27](https://github.com/spree/spree/blame/master/guides/content/developer/customization/s3_storage#L27)
 
 See also [RubyThursday episode](https://rubythursday.com/episodes/ruby-snack-27-upgrade-paperclip-and-aws-sdk-in-prep-for-rails-5) walkthrough of upgrading paperclip in your project.
 
