--- a/docs/user-guide/configuration/analytics-tracker.mdx
+++ b/docs/user-guide/configuration/analytics-tracker.mdx
@@ -5,11 +5,11 @@ order: 0
 
 # Analytics Tracker
 
-### [Introduction](analytics-tracker.md#introduction) <a id="introduction"></a>
+### [Introduction](analytics-tracker#introduction) <a id="introduction"></a>
 
 Understanding your site’s visitor traffic patterns is very important when it comes to planning your company’s marketing and growth strategies.
 
-#### [Google Analytics Enhanced Ecommerce and Segment Ecommerce](analytics-tracker.md#google-analytics-enhanced-ecommerce-and-segment-ecommerce) <a id="google-analytics-enhanced-ecommerce-and-segment-ecommerce"></a>
+#### [Google Analytics Enhanced Ecommerce and Segment Ecommerce](analytics-tracker#google-analytics-enhanced-ecommerce-and-segment-ecommerce) <a id="google-analytics-enhanced-ecommerce-and-segment-ecommerce"></a>
 
 In order to enable Spree Analytics Tracker, the following extension is required, which we have extracted from the Spree core: [https://github.com/spree-contrib/spree\_analytics\_trackers](https://github.com/spree-contrib/spree_analytics_trackers).
 
