--- a/docs/user-guide/configuration/reimbursement-types.mdx
+++ b/docs/user-guide/configuration/reimbursement-types.mdx
@@ -1,36 +1,36 @@
 # Reimbursement Types
 
-### [Introduction](reimbursement-types.md#introduction) <a id="introduction"></a>
+### [Introduction](reimbursement-types#introduction) <a id="introduction"></a>
 
 To make it easier for you when you need to make a reimbursement, there are various reimbursement types that help you define what kind of return to give to the customer \(e.g store credit, credit card or exchange for a new item\).
 
-### [Creating a Reimbursement Type](reimbursement-types.md#creating-a-reimbursement-type) <a id="creating-a-reimbursement-type"></a>
+### [Creating a Reimbursement Type](reimbursement-types#creating-a-reimbursement-type) <a id="creating-a-reimbursement-type"></a>
 
 You simply open the **Configuration** tab and press **Reimbursement Types**. Now, you can see all previously set up types, with the possibility to add a new one.
 
-![Reimbursement types](/images//image%20%2836%29.png)
+![Reimbursement types](/images/image%20%2836%29.png)
 
 To add New Reimbursement Type, press the **Add New Reimbursement Type** button which is placed in the upper right corner.
 
-![Add Reimbursement Types](/images//image%20%2826%29.png)
+![Add Reimbursement Types](/images/image%20%2826%29.png)
 
 You now only have to add a name and choose the type that you would like to have in your store.
 
-![Add Reimbursement Types inside](/images//image%20%2828%29.png)
+![Add Reimbursement Types inside](/images/image%20%2828%29.png)
 
 The type is created via backend work and we’re at your service to make it easy. This option defines what kind of return to give to the user, such as a credit card refund or an exchange for a new item.
 
-![Reimbursement Types dropdown](/images//image%20%2844%29.png)
+![Reimbursement Types dropdown](/images/image%20%2844%29.png)
 
 Now simply check the **Active** checkbox and press the **Create** button to create a brand new reimbursement type in your shop!
 
-### [Editing and Deleting an existing Reimbursement Type](reimbursement-types.md#editing-and-deleting-an-existing-reimbursement-type) <a id="editing-and-deleting-an-existing-reimbursement-type"></a>
+### [Editing and Deleting an existing Reimbursement Type](reimbursement-types#editing-and-deleting-an-existing-reimbursement-type) <a id="editing-and-deleting-an-existing-reimbursement-type"></a>
 
 Once you have created a type that you would like to edit, you can press the **Edit Icon** on the right side of the type’s name.
 
-![Reimbursement Edit Icon](/images//image%20%2827%29.png)
+![Reimbursement Edit Icon](/images/image%20%2827%29.png)
 
 To delete, press the **Delete Icon** next to the **Edit Icon**.
 
-![Reimbursement Delete Icon](/images//image%20%2824%29.png)
+![Reimbursement Delete Icon](/images/image%20%2824%29.png)
 
