--- a/docs/user-guide/configuration/store-order-notifications.mdx
+++ b/docs/user-guide/configuration/store-order-notifications.mdx
@@ -1,22 +1,22 @@
 # Store Order Notifications
 
-### [Introduction](store-credit-categories.md#introduction) <a id="introduction"></a>
+### [Introduction](store-credit-categories#introduction) <a id="introduction"></a>
 
 As a store owner, you may wish to receive an email notification each time your store receives a new order. Let’s set that up now.
 
-### [Enabling Order Notifications](store-order-notifications.md#enabling-order-notifications) <a id="enabling-order-notifications"></a>
+### [Enabling Order Notifications](store-order-notifications#enabling-order-notifications) <a id="enabling-order-notifications"></a>
 
 To find your store’s **Order Notifications** settings, click on the **Configuration** dropdown and then click **Stores**. Find the store you’re looking for and click the **Edit** button.
 
-![](/images//zrzut-ekranu-2021-08-20-000659.jpg)
+![](/images/zrzut-ekranu-2021-08-20-000659.jpg)
 
 Scroll down to the **Emails** category and add your desired email address to the field labeled **New Order Notifications Email**.
 
-![Admin: Store Emails Group](/images//image%20%2852%29.png)
+![Admin: Store Emails Group](/images/image%20%2852%29.png)
 
 Click the **Update** button at the bottom of the page and you’re all set!
 
-### [Disabling Order Notifications](store-order-notifications.md#disabling-order-notifications) <a id="disabling-order-notifications"></a>
+### [Disabling Order Notifications](store-order-notifications#disabling-order-notifications) <a id="disabling-order-notifications"></a>
 
 To disable order notifications, simply remove the email address from the field labeled **New Order Notifications Email** and click the **Update** button at the bottom of the page.
 
