--- a/docs/user-guide/configuration/zones-countries-states.mdx
+++ b/docs/user-guide/configuration/zones-countries-states.mdx
@@ -4,23 +4,23 @@ title: Store Order Notifications
 
 # Zones, Countries, and States
 
-### [Introduction](zones-countries-states.md#introduction) <a id="introduction"></a>
+### [Introduction](zones-countries-states#introduction) <a id="introduction"></a>
 
-Your Spree store allows you to decide in which parts of the world to sell products, and how to group different areas into geographical regions so that you may conveniently set [shipping](../shipments/shipments-description.md) and [taxation](taxes.md#zones) policies. This is accomplished through the use of zones, countries, and states.
+Your Spree store allows you to decide in which parts of the world to sell products, and how to group different areas into geographical regions so that you may conveniently set [shipping](../shipments/shipments-description) and [taxation](taxes#zones) policies. This is accomplished through the use of zones, countries, and states.
 
-### [Zones](zones-countries-states.md#zones) <a id="zones"></a>
+### [Zones](zones-countries-states#zones) <a id="zones"></a>
 
-Within a Spree store, zones are geographical groupings; they represent collections of either states or countries. You can read all about zones in the [zones guide](../shipments/zones.md#zones), including how to [create zones](../shipments/zones.md#creating-a-zone), how to [add members to a zone](../shipments/zones.md#adding-members-to-a-zone), and how to [remove members from a zone](../shipments/zones.md#removing-members-from-a-zone).
+Within a Spree store, zones are geographical groupings; they represent collections of either states or countries. You can read all about zones in the [zones guide](../shipments/zones#zones), including how to [create zones](../shipments/zones#creating-a-zone), how to [add members to a zone](../shipments/zones#adding-members-to-a-zone), and how to [remove members from a zone](../shipments/zones#removing-members-from-a-zone).
 
-### [Countries](zones-countries-states.md#countries) <a id="countries"></a>
+### [Countries](zones-countries-states#countries) <a id="countries"></a>
 
 You should already have several countries configured. You may want to edit items on this list based on your needs. To access the Countries list, go to your Admin Interface, click “Configuration”, then click “Countries”.
 
-![Countries List](/images//image%20%28123%29.png)
+![Countries List](/images/image%20%28123%29.png)
 
-### [States](zones-countries-states.md#states) <a id="states"></a>
+### [States](zones-countries-states#states) <a id="states"></a>
 
 A Spree store pre-loaded with seed data already has all of the states in the US and other countries.
 
-![US States](/images//image%20%2833%29.png)
+![US States](/images/image%20%2833%29.png)
 
