--- a/docs/user-guide/content-management/creating-a-new-menu.mdx
+++ b/docs/user-guide/content-management/creating-a-new-menu.mdx
@@ -1,6 +1,6 @@
 # Creating A New Menu
 
-### [Introduction](creating-a-new-menu.md#introduction) <a id="introduction"></a>
+### [Introduction](creating-a-new-menu#introduction) <a id="introduction"></a>
 
 To create a new menu in Spree, log into the admin and click the Content tab from the admin menu. Within the submenu options, click the Navigation link, you will then be taken to the menus area.
 
@@ -8,15 +8,15 @@ Once you are in the menus area, you will see a button in the top right of the sc
 
 
 
-![Menus Page](/images//image%20%281%29%20%281%29.png)
+![Menus Page](/images/image%20%281%29%20%281%29.png)
 
-### [New Menu Options](creating-a-new-menu.md#new-menu-options) <a id="new-menu-options"></a>
+### [New Menu Options](creating-a-new-menu#new-menu-options) <a id="new-menu-options"></a>
 
 Once you have entered the New Menu screen, you are presented with four options.
 
 
 
-![New Menu Page](/images//image%20%282%29.png)
+![New Menu Page](/images/image%20%282%29.png)
 
 * **Name:** You must give your menu a name; the menu name is not displayed in the frontend store view, so feel free to name your menu something you can quickly identify.
 * **Store:** Each menu belongs to one store; set the store that you want this menu to appear in.
@@ -29,7 +29,7 @@ Upon creating your first menu, you will be presented with a Menu Items Area; thi
 
 
 
-![Menu Items Area](/images//image%20%284%29.png)
+![Menu Items Area](/images/image%20%284%29.png)
 
-View the [Add Items To A Menu](add-items-to-a-menu.md) page of the Navigation documentation to begin adding items to your new menu.
+View the [Add Items To A Menu](add-items-to-a-menu) page of the Navigation documentation to begin adding items to your new menu.
 
