--- a/docs/user-guide/orders/editing-an-order.mdx
+++ b/docs/user-guide/orders/editing-an-order.mdx
@@ -1,6 +1,6 @@
 # Editing an Order
 
-## [Introduction](editing-an-order.md#introduction)
+## [Introduction](editing-an-order#introduction)
 
 There will be times when you need to edit orders that are placed in your store. Some examples:
 
@@ -9,23 +9,23 @@ There will be times when you need to edit orders that are placed in your store. 
 * You may need to change the shipping being charged on an order.
 * The customer may have store credit which you need to manually apply to their order.
 
-### [Editing an Order](editing-an-order.md#editing-an-order) <a id="editing-an-order"></a>
+### [Editing an Order](editing-an-order#editing-an-order) <a id="editing-an-order"></a>
 
-First, go to your Admin Interface. Click the “Orders” tab, and [locate the order](searching-orders.md) you want to change.
+First, go to your Admin Interface. Click the “Orders” tab, and [locate the order](searching-orders) you want to change.
 
-![Edit Order Link](/images//image%20%2860%29.png)
+![Edit Order Link](/images/image%20%2860%29.png)
 
 This will bring up the order edit page:
 
-![Order Edit Page](/images//image%20%2859%29.png)
+![Order Edit Page](/images/image%20%2859%29.png)
 
 You can change any of the following components of an order from here:
 
-* [The types and quantities of products](manual-order-entry.md#add-products)
-* [Shipping method](manual-order-entry.md#shipments)
-* [Tracking details for shipments](../shipments/shipping-methods.md#tracking-url)
-* [Customer information](manual-order-entry.md#customer-details)
-* [Adjustments](manual-order-entry.md#adjustments)
-* [Payment information](manual-order-entry.md#payments)
-* [Return authorizations](returns.md)
+* [The types and quantities of products](manual-order-entry#add-products)
+* [Shipping method](manual-order-entry#shipments)
+* [Tracking details for shipments](../shipments/shipping-methods#tracking-url)
+* [Customer information](manual-order-entry#customer-details)
+* [Adjustments](manual-order-entry#adjustments)
+* [Payment information](manual-order-entry#payments)
+* [Return authorizations](returns)
 
