--- a/docs/user-guide/orders/order-states.mdx
+++ b/docs/user-guide/orders/order-states.mdx
@@ -1,10 +1,10 @@
 # Order States
 
-### [Introduction](order-states.md#introduction) <a id="introduction"></a>
+### [Introduction](order-states#introduction) <a id="introduction"></a>
 
 A new order is initiated when a customer places a product in their shopping cart. The order then passes through several states before it is considered `complete`. The order states are listed below. An order cannot continue to the next state until the previous state has been successfully satisfied. For example, an order cannot proceed to the `delivery` state until the customer has provided their billing and shipping address for the order during the `address` state.
 
-### [Order States](order-states.md#order-states) <a id="order-states"></a>
+### [Order States](order-states#order-states) <a id="order-states"></a>
 
 The states that an order passes through are as follows:
 
