--- a/docs/user-guide/products/editing-products.mdx
+++ b/docs/user-guide/products/editing-products.mdx
@@ -1,14 +1,14 @@
 # Editing Products
 
-### [Introduction](editing-products.md#introduction) <a id="introduction"></a>
+### [Introduction](editing-products#introduction) <a id="introduction"></a>
 
 You will often need to modify the products in your store; for example, prices may fluctuate, descriptions may change, and you may take new photographs of your inventory. Spree makes it quick and easy to make such changes.
 
-### [Editing Products](editing-products.md#editing-products) <a id="editing-products"></a>
+### [Editing Products](editing-products#editing-products) <a id="editing-products"></a>
 
 To make changes to your product, go to your Admin Interface, click the “Products” tab, and click the “Edit” icon next to the product.
 
-![Edit Product Link](/images//image2.png)
+![Edit Product Link](/images/image2.png)
 
-The edit form is the exact same one you use when [creating products](creating-a-new-product.md). See that guide for explanation of any of the fields used when editing your product.
+The edit form is the exact same one you use when [creating products](creating-a-new-product). See that guide for explanation of any of the fields used when editing your product.
 
