--- a/docs/user-guide/promotions/creating-a-new-promotion.mdx
+++ b/docs/user-guide/promotions/creating-a-new-promotion.mdx
@@ -1,6 +1,6 @@
 # Creating a New Promotion
 
-### [Creating a new promotion](creating-a-new-promotion.md#creating-a-new-promotion)
+### [Creating a new promotion](creating-a-new-promotion#creating-a-new-promotion)
 
 To create a new promotion, click the “New Promotion” button.
 
@@ -20,7 +20,7 @@ The page that is shown allows you to set several standard options that apply to 
 
 When you enter values for these fields and click “Create”, a new screen is rendered, giving you access to even more options to fine-tune your promotion.
 
-### [Rules](creating-a-new-promotion.md#rules) <a id="rules"></a>
+### [Rules](creating-a-new-promotion#rules) <a id="rules"></a>
 
 Rules represent the conditions that must be met for a promotion to be applicable to an order. You can set one or more rules for a single promotion. When you set multiple rules, you have the option of either requiring all of the rules to be met for the promotion to apply, or allowing promotion to apply to an order when only one of the rules is met.
 
@@ -28,7 +28,7 @@ There are five types of rules. You can only add one rule of each type to a singl
 
 ![Rules Options](https://guides.spreecommerce.org/static/5960e472e08563296a3ecf9e5909956d/f89ac/rules_options.jpg)
 
-#### [Item Total](creating-a-new-promotion.md#item-total) <a id="item-total"></a>
+#### [Item Total](creating-a-new-promotion#item-total) <a id="item-total"></a>
 
 When you select “Item total” from the “Add Rule of Type” drop-down menu and click “Add”, you are declaring an Item Total rule.
 
@@ -40,7 +40,7 @@ To remove a rule from a promotion, click the cross icon next to it.
 
 ![Delete Rule Icon](https://guides.spreecommerce.org/static/6ac00e7c3674cb25b0095cc790c9dabb/a2957/delete_rule_icon.jpg)
 
-#### [Products](creating-a-new-promotion.md#products) <a id="products"></a>
+#### [Products](creating-a-new-promotion#products) <a id="products"></a>
 
 Using a rule of this type means the order must contain **at least one** or **all** of the products you declare.
 
@@ -48,31 +48,31 @@ Using a rule of this type means the order must contain **at least one** or **all
 
 To create this kind of rule, just select “Product\(s\)” from the “Add Rule of Type” drop-down menu and click “Add”. Start typing in the name of the product\(s\) you want to apply discounts to into the “Choose Products” box. Click on the correct variants. Choose either “at least one” or “all” from the selection box, and click “Update”.
 
-#### [User](creating-a-new-promotion.md#user) <a id="user"></a>
+#### [User](creating-a-new-promotion#user) <a id="user"></a>
 
 You can apply the User rule type to restrict promotion to only selected customers. To create this type of rule, select “User” from the “Add Rule of Type” drop-down menu and click “Add”. Start typing in the name or email address of the user\(s\) you want to offer this promotion to. As the correct users are displayed, click them to add them to the list. Once complete, click “Update”.
 
 ![User Rule](https://guides.spreecommerce.org/static/88ef53b6e9a481e65d32b57a00a9d4a1/282c4/user_rule.jpg)
 
-#### [First Order](creating-a-new-promotion.md#first-order) <a id="first-order"></a>
+#### [First Order](creating-a-new-promotion#first-order) <a id="first-order"></a>
 
 Select “First order” from the “Add Rule of Type” drop-down menu and click “Add” then “Update” to add a rule of this type to your promotion. This rule will restrict the promotion to customers who are ordering from you for the first time.
 
 ![First Order Rule](https://guides.spreecommerce.org/static/a7c1283c1d1e0878837a8c6f45603ad4/40619/first_order_rule.jpg)
 
-#### [User Logged In](creating-a-new-promotion.md#user-logged-in) <a id="user-logged-in"></a>
+#### [User Logged In](creating-a-new-promotion#user-logged-in) <a id="user-logged-in"></a>
 
 Add a rule of this type to restrict the promotion only to logged-in users. Select “User Logged In” from the “Add Rule of Type” drop-down list, click “Add”, then click “Update”.
 
 ![Logged In Rule](https://guides.spreecommerce.org/static/e728d5592db79070f64a2e40860a5e7d/eb520/logged_in_rule.jpg)
 
-### [Actions](creating-a-new-promotion.md#actions) <a id="actions"></a>
+### [Actions](creating-a-new-promotion#actions) <a id="actions"></a>
 
-Whereas [Rules](creating-a-new-promotion.md#rules) establish whether a promotion applies or not, Actions determine what happens when a promotion does apply to an order. There are two types of actions: [create adjustments](creating-a-new-promotion.md#create-adjustments) and [create line items](creating-a-new-promotion.md#create-line-items).
+Whereas [Rules](creating-a-new-promotion#rules) establish whether a promotion applies or not, Actions determine what happens when a promotion does apply to an order. There are two types of actions: [create adjustments](creating-a-new-promotion#create-adjustments) and [create line items](creating-a-new-promotion#create-line-items).
 
-#### [Create Adjustments](creating-a-new-promotion.md#create-adjustments) <a id="create-adjustments"></a>
+#### [Create Adjustments](creating-a-new-promotion#create-adjustments) <a id="create-adjustments"></a>
 
-When you select “Create adjustment” from the “Add Action of Type” drop-down menu and click “Add”, the system presents you with several calculator options. These are the same as the options you read about in the [calculators guide](../shipments/calculators.md), except that instead of a [price sack calculator](../shipments/calculators.md#price-sack), there are two additional calculators: percent per item and free shipping.
+When you select “Create adjustment” from the “Add Action of Type” drop-down menu and click “Add”, the system presents you with several calculator options. These are the same as the options you read about in the [calculators guide](../shipments/calculators), except that instead of a [price sack calculator](../shipments/calculators#price-sack), there are two additional calculators: percent per item and free shipping.
 
 ![Create Adjustments Action Calculators](https://guides.spreecommerce.org/static/4348c86f4dc2fd1c1f04908f9c6fb1ed/40619/create_adjustment.jpg)
 
@@ -90,7 +90,7 @@ Each calculator has its own set of required additional information fields.
 
 Enter all required information for your calculator type, then click “Update”.
 
-#### [Create Line Items](creating-a-new-promotion.md#create-line-items) <a id="create-line-items"></a>
+#### [Create Line Items](creating-a-new-promotion#create-line-items) <a id="create-line-items"></a>
 
 This action type is a way of automatically adding items to an order to which a promotion applies. To add this action to your promotion, select “Create line items” from the “Add Action of Type” drop-down menu and click “Add”.
 
