--- a/docs/user-guide/shipments/shipments-description.mdx
+++ b/docs/user-guide/shipments/shipments-description.mdx
@@ -4,10 +4,10 @@ Spree uses a very flexible and effective system to calculate shipping. This set 
 
 To properly leverage Spree’s shipping system’s flexibility, you must understand a few key concepts:
 
-* [Shipping Categories](shipping-categories.md)
-* [Zones](zones.md)
-* [Calculators](calculators.md) \(to determine shipping rates\)
-* [Shipping Methods](shipping-methods.md)
+* [Shipping Categories](shipping-categories)
+* [Zones](zones)
+* [Calculators](calculators) \(to determine shipping rates\)
+* [Shipping Methods](shipping-methods)
 
-Let’s begin by understanding what [Shipping Categories](shipping-categories.md) are and how you can use them to differentiate products in your store.
+Let’s begin by understanding what [Shipping Categories](shipping-categories) are and how you can use them to differentiate products in your store.
 
