--- a/docs/user-guide/shipments/shipping-categories.mdx
+++ b/docs/user-guide/shipments/shipping-categories.mdx
@@ -1,6 +1,6 @@
 # Shipping Categories
 
-### [Shipping Categories](shipping-categories.md#shipping-categories) <a id="shipping-categories"></a>
+### [Shipping Categories](shipping-categories#shipping-categories) <a id="shipping-categories"></a>
 
 Shipping Categories are used to address special shipping needs for one or more of your products. The most common use for shipping categories is when certain products cannot be shipped in the same box. This is often due to size or material constraints.
 
@@ -10,13 +10,13 @@ To handle this use case in Spree, you would define a “Default” shipping cate
 
 During checkout, the shipping categories assigned to the products in your customer’s order will be a key factor in determining which shipping methods and costs your Spree store offers to your customer at checkout.
 
-#### [Creating a Shipping Category](shipping-categories.md#creating-a-shipping-category) <a id="creating-a-shipping-category"></a>
+#### [Creating a Shipping Category](shipping-categories#creating-a-shipping-category) <a id="creating-a-shipping-category"></a>
 
 To create a new shipping category, go to the Admin Interface, click the “Configuration” tab, click the “Shipping Categories” link, and then click the “New Shipping Category” button. Enter a name for your new shipping category and click the “Create” button.
 
 ![New Shipping Category](https://guides.spreecommerce.org/static/146f1d2e4c2ad33c616680fcb107e120/03ffe/new_shipping_category.jpg)
 
-#### [Adding a Shipping Category to a Product](shipping-categories.md#adding-a-shipping-category-to-a-product) <a id="adding-a-shipping-category-to-a-product"></a>
+#### [Adding a Shipping Category to a Product](shipping-categories#adding-a-shipping-category-to-a-product) <a id="adding-a-shipping-category-to-a-product"></a>
 
 Once you’ve created your shipping categories, you can assign the appropriate category to each of your products. To associate a shipping category with a product, go to the Admin Interface and click the “Products” tab; then click on the product that you would like to edit from the list that appears.
 
@@ -24,7 +24,7 @@ Once you are in edit mode for the product, select the shipping category you want
 
 ![Select Shipping Category](https://guides.spreecommerce.org/static/b406b7ec0de9db8a6a812c9549316381/0f1aa/select_shipping_category.jpg)
 
-### [Next Step](shipping-categories.md#next-step) <a id="next-step"></a>
+### [Next Step](shipping-categories#next-step) <a id="next-step"></a>
 
-Now that you understand how Shipping Categories work, let’s move on to the next element of the Spree shipping system - shipping [zones](zones.md).
+Now that you understand how Shipping Categories work, let’s move on to the next element of the Spree shipping system - shipping [zones](zones).
 
