--- a/docs/user-guide/users/editing-users.mdx
+++ b/docs/user-guide/users/editing-users.mdx
@@ -1,12 +1,12 @@
 # Editing Users
 
-### [Introduction.](editing-users.md#introduction) <a id="introduction"></a>
+### [Introduction.](editing-users#introduction) <a id="introduction"></a>
 
 There is a possibility to edit existing users. When you enter the **Users** tab, simply search for the specific user that you would like to edit and press the **Edit** icon.
 
 ![User edit option](https://guides.spreecommerce.org/static/377a22fe734e689d41ffd96d04878eef/06dbb/user_edit_option.jpg)
 
-### [General Settings](editing-users.md#general-settings) <a id="general-settings"></a>
+### [General Settings](editing-users#general-settings) <a id="general-settings"></a>
 
 When you first open the account editing page you will see **General Settings**.
 
@@ -26,24 +26,24 @@ Moreover, there are **Lifetime Stats** collected by Spree. You can see the follo
 
 ![Lifetime Stats](https://guides.spreecommerce.org/static/1075c1e135ab893372423e8b174d89c1/888cc/user_edit_inside_lifetimestats.jpg)
 
-#### [Addresses](editing-users.md#addresses) <a id="addresses"></a>
+#### [Addresses](editing-users#addresses) <a id="addresses"></a>
 
 In this section, you can manage addresses \(**Shipping** and **Billing**\) defined by the user during the checkout. There are also **Lifetime Stats** visible at the bottom of this page. When you make changes to addresses, you have to press the **Update** button in order to save the changes. If you don’t want to save them, simply press the **Cancel** button.
 
 ![User Addresses](https://guides.spreecommerce.org/static/ec528b231f21f523f5c46526d9faa2da/06dbb/user_edit_inside_address.jpg)
 
-#### [Orders](editing-users.md#orders) <a id="orders"></a>
+#### [Orders](editing-users#orders) <a id="orders"></a>
 
 This is a simple review of all orders created by the user. There are also **Lifetime Stats** visible at the bottom of this page. A few options are worth mentioning:
 
 * **Completed at** - The date on which the user created a particular order.
 * **Number** - The unique ID for a particular order; you can also move directly to the order when you click the ID.
-* **State** - The current state of a particular order; you can find more [about order state here](../orders/order-states.md).
+* **State** - The current state of a particular order; you can find more [about order state here](../orders/order-states).
 * **Total** - The total price of a particular order.
 
 ![User&apos;s orders](https://guides.spreecommerce.org/static/22f94715f552dfc6b717b2027d6dcf26/ed1a3/user_edit_orders.jpg)
 
-#### [Items](editing-users.md#items) <a id="items"></a>
+#### [Items](editing-users#items) <a id="items"></a>
 
 Very similar to the **Orders** tab; however, a few more options are present here regarding the items purchased by the user:
 
@@ -52,14 +52,14 @@ Very similar to the **Orders** tab; however, a few more options are present here
 * **Price** - Price without taxes and shipping cost.
 * **Quantity** - Total number of purchased products.
 * **Total** - Total price of a certain order.
-* **State** - As previously mentioned, there is more information [here](../orders/order-states.md).
+* **State** - As previously mentioned, there is more information [here](../orders/order-states).
 * **Order \#** - An order’s unique ID that hyperlinks you to the order’s details.
 
 ![User&apos;s Items](https://guides.spreecommerce.org/static/62ee80c258cbeefba3da31ec1d85ac93/3bda4/user_edit_inside_items.jpg)
 
 #### [Store Credits](https://guides.spreecommerce.org/user/users/editing_users.html#store-credits) <a id="store-credits"></a>
 
-Firstly, to add store credit to the User, you have to create a **Category** which you can learn more about [here](../configuration/store-credit-categories.md). Once you create a category you can assign Store Credit to the Users by simply clicking **Edit** on a certain User and pressing **Store Credit** in the right panel.
+Firstly, to add store credit to the User, you have to create a **Category** which you can learn more about [here](../configuration/store-credit-categories). Once you create a category you can assign Store Credit to the Users by simply clicking **Edit** on a certain User and pressing **Store Credit** in the right panel.
 
 ![User edit inside](https://guides.spreecommerce.org/static/816e7d5b65fa7a8b15f94ae16e075950/b9b0e/store_credit_user_add.jpg)
 
@@ -115,7 +115,7 @@ Once the order has been placed there is a recapitulation of the order. The user 
 
 ![Placed order](https://guides.spreecommerce.org/static/c28bf1e93e5a5f901fd91f1b35b91dd1/b9b0e/store_credit_front_placed_order.jpg)
 
-As an Admin you are able to check how the user paid for the order. Simply choose the order that you would like to inspect and go to the **Payments** tab. If you don’t know where to find this tab you can find out [here](../orders/manual-order-entry.md). Admins have to capture payments manually by default. In order to enable Automatic Payment Capture for the future payments we strongly recommend reading about it [here](../payments/payment-methods.md).
+As an Admin you are able to check how the user paid for the order. Simply choose the order that you would like to inspect and go to the **Payments** tab. If you don’t know where to find this tab you can find out [here](../orders/manual-order-entry). Admins have to capture payments manually by default. In order to enable Automatic Payment Capture for the future payments we strongly recommend reading about it [here](../payments/payment-methods).
 
 ![Admin panel Payments](https://guides.spreecommerce.org/static/68df05c409cef69036071e7db5fc8145/b9b0e/store_credit_order_paid.jpg)
 
