--- a/docs/user-guide/users/searching-users.mdx
+++ b/docs/user-guide/users/searching-users.mdx
@@ -1,14 +1,14 @@
 # Searching Users
 
-### [Searching Users](searching-users.md#searching-users)
+### [Searching Users](searching-users#searching-users)
 
 \
 When you click the **Users** tab you will see a **Filter dropdown**, a **New User** button, and all existing users that have ever created an account on your page.
 
 Next to each user’s email, there are 2 buttons and by clicking User above the list of users’ emails, you can sort them by name.
 
-* **Edit** - Allows you to make [additional changes to the user’s settings](editing-users.md).
-* **Delete** - Allows you to [delete the user permanently](deleting-users.md).
+* **Edit** - Allows you to make [additional changes to the user’s settings](editing-users).
+* **Delete** - Allows you to [delete the user permanently](deleting-users).
 * **Sort by user’s name** - Allows you to sort the users by name (A-Z, Z-A).
 
 ![User search options](https://guides.spreecommerce.org/static/5f1bd63cf008218bfc7a2f769bdb1c12/03ffe/users\_tab.jpg)
