--- a/docs/developer/advanced/deface_overrides_tutorial.mdx
+++ b/docs/developer/advanced/deface_overrides_tutorial.mdx
@@ -71,7 +71,7 @@ module Spree
 end
 ```
 
-Now, when we head to `http://localhost:3000/admin/products` and edit a product, we should be able to set a sale price for the product and be able to view it on our sale page, `http://localhost:3000/sale`. Note that you will likely need to restart our example Spree application \(created in the [Getting Started tutorial](../getting-started/installation.md)\).
+Now, when we head to `http://localhost:3000/admin/products` and edit a product, we should be able to set a sale price for the product and be able to view it on our sale page, `http://localhost:3000/sale`. Note that you will likely need to restart our example Spree application \(created in the [Getting Started tutorial](../getting-started/installation)\).
 
 ### Available actions
 
