--- a/docs/developer/contributing/index.mdx
+++ b/docs/developer/contributing/index.mdx
@@ -19,19 +19,19 @@ You can [submit an issue](https://github.com/spree/spree/issues/new/choose) on o
 
 ## Fixing a bug or creating a new feature
 
-Before diving into the Spree codebase we recommend you spend some time reviewing the [Internals section](../internals/stores.md) which will help you understand how Spree works under the hood.
+Before diving into the Spree codebase we recommend you spend some time reviewing the [Internals section](../internals/stores) which will help you understand how Spree works under the hood.
 
-After you're done with that please follow to [Developing Spree guide](developing_spree.md)
+After you're done with that please follow to [Developing Spree guide](developing_spree)
 
 To find issues you can tackle on we recommend visiting [Spree Contribute page](https://github.com/spree/spree/contribute) which lists issues tagged with [Good First Issue label](https://github.com/spree/spree/issues?q=is%3Aopen+is%3Aissue+label%3A%22Good+First+Issue%22). Those bugs or features are great starting points into Open Source development.
 
 ## Creating a Spree extension
 
-Extensions provide additional features and integrations for your Spree store. You can create your own and share with the rest of the community. Before doing so please check our [Extension directory](../extensions/extensions.md) if your desired extension does not exist already. If not [follow Extensions tutorial](../extensions/extensions_tutorial.md) to learn how to create one.
+Extensions provide additional features and integrations for your Spree store. You can create your own and share with the rest of the community. Before doing so please check our [Extension directory](../extensions/extensions) if your desired extension does not exist already. If not [follow Extensions tutorial](../extensions/extensions_tutorial) to learn how to create one.
 
 ## Upgrading old extensions to recent Spree versions
 
-If you found an extension that does not work with the current Spree version you can read the [Updating Extensions for Spree guide](upgrading_extensions.md) to bring it up to speed.
+If you found an extension that does not work with the current Spree version you can read the [Updating Extensions for Spree guide](upgrading_extensions) to bring it up to speed.
 
 ## Helping others on Spree slack
 
