--- a/docs/developer/core-concepts/internals/adjustments.mdx
+++ b/docs/developer/core-concepts/internals/adjustments.mdx
@@ -8,7 +8,7 @@ order: 6
 
 ## Overview
 
-An `Adjustment` object tracks an adjustment to the price of an [Order](orders.md), an order's [Line Item](orders.md#line-items), or an order's [Shipments](shipments.md) within a Spree Commerce storefront.
+An `Adjustment` object tracks an adjustment to the price of an [Order](orders), an order's [Line Item](orders#line-items), or an order's [Shipments](shipments) within a Spree Commerce storefront.
 
 Adjustments can be either positive or negative. Adjustments with a positive value are sometimes referred to as "charges" while adjustments with a negative value are sometimes referred to as "credits." These are just terms of convenience since there is only one `Spree::Adjustment` model in a storefront which handles this by allowing either positive or negative values.
 
