--- a/docs/developer/customization/emails.mdx
+++ b/docs/developer/customization/emails.mdx
@@ -7,7 +7,7 @@ order: 10
 # Emails
 
 <Note>
-Emails are now part of `spree_emails` gem
+Emails are now part of `spree_emails` gem. If you use `spree_starter` you already have it installed.
 </Note>
 
 ## Overview
