--- a/docs/developer/upgrades/upgrades/4.3-to-4.4.mdx
+++ b/docs/developer/upgrades/upgrades/4.3-to-4.4.mdx
@@ -8,9 +8,9 @@ If you have any questions or suggestions feel free to reach out through [Spree s
 
 **If you're on an older version than 4.3 please follow previous upgrade guides and perform those upgrades incrementally**, eg.
 
-1. [upgrade 4.0 to 4.1](four-dot-oh-to-four-dot-one.md)
-2. [upgrade 4.1 to 4.2](four-dot-one-to-four-dot-two.md)
-3. [upgrade 4.2 to 4.3](fout-dot-two-to-four-dot-three.md)
+1. [upgrade 4.0 to 4.1](four-dot-oh-to-four-dot-one)
+2. [upgrade 4.1 to 4.2](four-dot-one-to-four-dot-two)
+3. [upgrade 4.2 to 4.3](fout-dot-two-to-four-dot-three)
 
 This is the safest and recommended method.
 
@@ -138,7 +138,7 @@ Spree::Dependencies.address_update_service
 
 ## Read the release notes
 
-For information about changes contained within this release, please read the [CHANGELOG](https://github.com/spree/spree/blob/master/CHANGELOG.md).
+For information about changes contained within this release, please read the [CHANGELOG](https://github.com/spree/spree/blob/master/CHANGELOG).
 
 ## More info
 
