--- a/docs/developer/upgrades/upgrades/fout-dot-two-to-four-dot-three.mdx
+++ b/docs/developer/upgrades/upgrades/fout-dot-two-to-four-dot-three.mdx
@@ -12,9 +12,9 @@ If you have any questions or suggestions feel free to reach out through [Spree s
 
 **If you're on an older version than 4.1 please follow previous upgrade guides and perform those upgrades incrementally**, eg.
 
-1. [upgrade 3.7 to 4.0](three-dot-seven-to-four-dot-oh.md)
-2. [upgrade 4.0 to 4.1](four-dot-oh-to-four-dot-one.md)
-3. [upgrade 4.1 to 4.2](four-dot-one-to-four-dot-two.md)
+1. [upgrade 3.7 to 4.0](three-dot-seven-to-four-dot-oh)
+2. [upgrade 4.0 to 4.1](four-dot-oh-to-four-dot-one)
+3. [upgrade 4.1 to 4.2](four-dot-one-to-four-dot-two)
 
 This is the safest and recommended method.
 
@@ -105,7 +105,7 @@ In your project create  `app/assets/config/manifest.jss` file with contents:
 //= link_directory ../stylesheets .css
 ```
 
-More [on this topic](https://github.com/rails/sprockets/blob/master/UPGRADING.md#manifestjs).
+More [on this topic](https://github.com/rails/sprockets/blob/master/UPGRADING#manifestjs).
 
 ### Update Spree Auth Devise and Spree Gateway
 
@@ -137,7 +137,7 @@ bundle update spree_related_products
 
 ## Read the release notes
 
-For information about changes contained within this release, please read the [CHANGELOG](https://github.com/spree/spree/blob/master/CHANGELOG.md).
+For information about changes contained within this release, please read the [CHANGELOG](https://github.com/spree/spree/blob/master/CHANGELOG).
 
 ## More info
 
