--- a/docs/developer/upgrades/upgrades/three-dot-five-to-three-dot-six.mdx
+++ b/docs/developer/upgrades/upgrades/three-dot-five-to-three-dot-six.mdx
@@ -23,7 +23,7 @@ Please follow the [official Rails guide](http://guides.rubyonrails.org/5_2_relea
 
 ### Migrate to ActiveStorage \(optional\)
 
-Please follow the [official paperclip guide](https://github.com/thoughtbot/paperclip/blob/master/MIGRATING.md) if you want to use ActiveStorage instead of paperclip.
+Please follow the [official paperclip guide](https://github.com/thoughtbot/paperclip/blob/master/MIGRATING) if you want to use ActiveStorage instead of paperclip.
 
 You can still use paperclip for attachment management by setting `SPREE_USE_PAPERCLIP` environment variable to `true`, but keep in mind that paperclip is DEPRECATED and we will remove paperclip support in Spree 4.0.
 
