--- a/docs/user-guide/content-management/building-the-main-menu.mdx
+++ b/docs/user-guide/content-management/building-the-main-menu.mdx
@@ -1,12 +1,12 @@
 # Building The Main Menu
 
-### [Introduction](building-the-main-menu.md#introduction) <a id="introduction"></a>
+### [Introduction](building-the-main-menu#introduction) <a id="introduction"></a>
 
 This guide walks you through building the mega menu found in the Spree demo store, and assumes that you have created a new menu with the location set to Header.
 
 If this is not the case please visit the [Create A Menu](https://app.gitbook.com/@spark-solutions/s/spree-user-documentation/navigation/creating_a_new_menu) section of the documentation to create your new menu before continuing.
 
-### [Add A Top Level Item](building-the-main-menu.md#add-a-top-level-item) <a id="add-a-top-level-item"></a>
+### [Add A Top Level Item](building-the-main-menu#add-a-top-level-item) <a id="add-a-top-level-item"></a>
 
 1. Click The **Add New Item** button to take you to the New Menu Item screen.
 2. Within the New Menu Item screen enter your desired link name, for this demo we called this link `Women`.
@@ -15,9 +15,9 @@ If this is not the case please visit the [Create A Menu](https://app.gitbook.com
 
 In the image below you can see that we named our menu item Women and linked to the Women taxon, and the menu item is a link.
 
-![Menu Items Area](/images//image%20%283%29.png)
+![Menu Items Area](/images/image%20%283%29.png)
 
-#### [Add The Category & Promotions Container](building-the-main-menu.md#add-the-category-promotions-container) <a id="add-the-category-promotions-container"></a>
+#### [Add The Category & Promotions Container](building-the-main-menu#add-the-category-promotions-container) <a id="add-the-category-promotions-container"></a>
 
 1. Click The **Add New Item** button to take you to the New Menu Item screen.
 2. From the options set **Item Type:** `Container`, **Code:** `category`, **Nested under:** `Women`, you can name this menu item anything you like, and then click **Create**.
@@ -27,17 +27,17 @@ The promotions container used in the Spree mega menu is exactly the same as the 
 
 In the image below you can see we now have two containers nested under the Women link that we created earlier, we named our containers **Categories** and **Promotions**, they are of the type container and have the appropriate codes.
 
-![Menu Items Area](/images//image%20%2858%29.png)
+![Menu Items Area](/images/image%20%2858%29.png)
 
-### [Adding Links To Containers](building-the-main-menu.md#adding-links-to-containers) <a id="adding-links-to-containers"></a>
+### [Adding Links To Containers](building-the-main-menu#adding-links-to-containers) <a id="adding-links-to-containers"></a>
 
-#### [Add A Link To Categories Container](building-the-main-menu.md#add-a-link-to-categories-container) <a id="add-a-link-to-categories-container"></a>
+#### [Add A Link To Categories Container](building-the-main-menu#add-a-link-to-categories-container) <a id="add-a-link-to-categories-container"></a>
 
 Adding a link under the categories container is just a case of creating a new menu item as you did before when adding a top level item, only this time from the nest under option you are going to select Nest Under: `Categories`, if you forget to nest your item while creating it, you can always rearange your items on the menu edit page, and nest the item from there.
 
-#### [Add A Link To Promotions Container](building-the-main-menu.md#add-a-link-to-promotions-container) <a id="add-a-link-to-promotions-container"></a>
+#### [Add A Link To Promotions Container](building-the-main-menu#add-a-link-to-promotions-container) <a id="add-a-link-to-promotions-container"></a>
 
 Adding a promotion link under the Promotions container is just as easy as adding the link under the Categories container. The only difference is we are nesting this new link under the Promotions container, and using the **Name** to set the banner name **Subtitle** to set the banner subtitle and Image field to add our promo image.
 
-![Menu Items Area](/images//image%20%2856%29.png)
+![Menu Items Area](/images/image%20%2856%29.png)
 
