--- a/docs/user-guide/products/deleting-products.mdx
+++ b/docs/user-guide/products/deleting-products.mdx
@@ -1,14 +1,14 @@
 # Deleting Products
 
-### [Introduction](deleting-products.md#introduction) <a id="introduction"></a>
+### [Introduction](deleting-products#introduction) <a id="introduction"></a>
 
 To delete a product in your store, go into the Admin Interface and click the “Products” tab. A list of your store’s product inventory will appear. Find the product that you would like to delete and click the “Delete” icon on the right to remove it from your store.
 
-![Deleting a Product](/images//del.png)
+![Deleting a Product](/images/del.png)
 
 A message will appear asking you to confirm that you want to delete the product. Click “OK”.
 
-### [Viewing](deleting-products.md#viewing) <a id="viewing"></a>
+### [Viewing](deleting-products#viewing) <a id="viewing"></a>
 
 Deleted products no longer appear in the customer-facing area of your store. However, they do remain in your product database. To view products that have been deleted from your store, go to the “Products” tab in the Admin Interface and find the “Search” section. Do not enter anything in the “Name” or “SKU” fields. Check the “Show Deleted” box and click “Search”. The search results will return a list of your entire product inventory including active and deleted products.
 
@@ -16,13 +16,13 @@ Search for Deleted Products
 
 ![Search for Deleted Products](https://guides.spreecommerce.org/static/4be705dc2eae9c1e7999f3791dceaa94/03ffe/show_deleted_products.jpg)
 
-### [Re-activating](deleting-products.md#re-activating) <a id="re-activating"></a>
+### [Re-activating](deleting-products#re-activating) <a id="re-activating"></a>
 
-To re-activate a deleted product, find the product in your inventory following the steps [above](deleting-products.md#viewing). Deleted products will only have the “Clone” icon next to them, whereas active products will have the “Edit”, “Clone”, and “Delete” icons next to them. Click the “Clone” icon to the right of the deleted product.
+To re-activate a deleted product, find the product in your inventory following the steps [above](deleting-products#viewing). Deleted products will only have the “Clone” icon next to them, whereas active products will have the “Edit”, “Clone”, and “Delete” icons next to them. Click the “Clone” icon to the right of the deleted product.
 
 Clone a Deleted Product
 
 ![Clone a Deleted Product](https://guides.spreecommerce.org/static/09dd6a672e54320f2799aefe4d21176c/79ab3/clone_deleted_product.jpg)
 
-This will create a copy of the product, which will now appear in your product inventory list as “COPY OF” with the product name appended afterward. A new permalink and SKU will also be created for the product. Follow the instructions from the [Cloning guide](cloning-products.md) to modify the information for this product.
+This will create a copy of the product, which will now appear in your product inventory list as “COPY OF” with the product name appended afterward. A new permalink and SKU will also be created for the product. Follow the instructions from the [Cloning guide](cloning-products) to modify the information for this product.
 
