--- a/docs/user-guide/products/product-properties.mdx
+++ b/docs/user-guide/products/product-properties.mdx
@@ -1,12 +1,12 @@
 # Product Properties
 
-### [Product Properties](product-properties.md#product-properties) <a id="product-properties"></a>
+### [Product Properties](product-properties#product-properties) <a id="product-properties"></a>
 
 Depending on the nature of your store and the products you sell, you may want to add “Properties” to your product descriptions. Properties are typically used to provide additional information about a product to help the customer make a better purchase decision. Here is an example of how a product’s properties would display on the customer-facing area of a store:
 
-![New Product Variant](/images//image%20%2888%29.png)
+![New Product Variant](/images/image%20%2888%29.png)
 
-#### [Adding a Product Property](product-properties.md#adding-a-product-property) <a id="adding-a-product-property"></a>
+#### [Adding a Product Property](product-properties#adding-a-product-property) <a id="adding-a-product-property"></a>
 
 Follow these steps to add a Product Property. In this example, we are going to add a Property called “Country of Origin” with a value of “USA”.
 
@@ -23,7 +23,7 @@ Follow these steps to add a Product Property. In this example, we are going to a
 
 Now, when you navigate to the product’s page in your store, you will see the new Country of Origin property in the “Properties” list.
 
-![Properties List](/images//image%20%2896%29.png)
+![Properties List](/images/image%20%2896%29.png)
 
 You can add as many “Product Properties” to an individual “Product” as you like - just use the “Add Product Properties” button on the Product Properties page for an individual product.
 
