--- a/docs/user-guide/products/products-description.mdx
+++ b/docs/user-guide/products/products-description.mdx
@@ -6,17 +6,17 @@ From your store’s Admin Interface, you can manage all of the common tasks asso
 \
 
 
-![Products Admin](</images//prod1 (1).png>)
+![Products Admin](</images/prod1 (1).png>)
 
 From here you can:
 
-* [Create New Products](creating-a-new-product.md)
-* [Delete Existing Products](deleting-products.md)
-* [Edit Existing Products](editing-products.md)
-* [Clone Existing Products](cloning-products.md)
-* [Search Existing Products](searching-products.md)
-* [Manage Taxonomies and Taxons](taxonomies-and-taxons.md)
-* [Set Product Option Types](product-options.md) (allows you to manage variant types)
-* [Set Product Category](prototypes.md)
+* [Create New Products](creating-a-new-product)
+* [Delete Existing Products](deleting-products)
+* [Edit Existing Products](editing-products)
+* [Clone Existing Products](cloning-products)
+* [Search Existing Products](searching-products)
+* [Manage Taxonomies and Taxons](taxonomies-and-taxons)
+* [Set Product Option Types](product-options) (allows you to manage variant types)
+* [Set Product Category](prototypes)
 
-In addition, you can set up new [Product Option Types and Values](product-options.md); add, edit, and remove [Product Properties](product-properties.md); and work with [Product Prototypes](prototypes.md).
+In addition, you can set up new [Product Option Types and Values](product-options); add, edit, and remove [Product Properties](product-properties); and work with [Product Prototypes](prototypes).
