--- a/docs/user-guide/products/searching-products.mdx
+++ b/docs/user-guide/products/searching-products.mdx
@@ -1,6 +1,6 @@
 # Searching Products
 
-## [Searching Products](searching-products.md#searching-products)
+## [Searching Products](searching-products#searching-products)
 
 When you click the **Products** tab, you will see a dropdown with the **Products settings** on the Admin Interface. Next, click the **Products** tab in the **Products settings**. You are then presented with a summary of all actual products in the shop.
 
@@ -13,19 +13,19 @@ The list shows you the following information about each order:
 
 Next to each product there are 3 buttons.
 
-* **Edit** - Allows you to make [additional changes to product](editing-products.md).
-* **Clone** - Allows you to make a [duplicate of the product](cloning-products.md).
-* **Delete** - Allows you to [delete the product](deleting-products.md).
+* **Edit** - Allows you to make [additional changes to product](editing-products).
+* **Clone** - Allows you to make a [duplicate of the product](cloning-products).
+* **Delete** - Allows you to [delete the product](deleting-products).
 
-![Product Search](/images//image2%20%283%29.png)
+![Product Search](/images/image2%20%283%29.png)
 
-### [Filtering products](searching-products.md#filtering-products) <a id="filtering-products"></a>
+### [Filtering products](searching-products#filtering-products) <a id="filtering-products"></a>
 
 You may not always want to see every product in the store, as is the Spree default. You may want to view only the products to which you would like to make changes. The default way of sorting products that are present is by the name, but there is also the possibility to sort them by Master price.
 
 You can choose one or more of the following options to narrow your product search, then click the **Filter** button to extend filter options in the dropdown menu.
 
-![Filter products](/images//image2%20%285%29.png)
+![Filter products](/images/image2%20%285%29.png)
 
 * **Name** - You can filter a particular product by its name.
 * **SKU** - Every time you create a product you may want to assign an SKU Number to make a search much faster and simplify shipping flow. You can use that number to search for the product.
