--- a/docs/user-guide/shipments/calculators.mdx
+++ b/docs/user-guide/shipments/calculators.mdx
@@ -1,30 +1,30 @@
 # Calculators
 
-### [Calculators](calculators.md#calculators) <a id="calculators"></a>
+### [Calculators](calculators#calculators) <a id="calculators"></a>
 
-A Calculator is the component of the Spree shipping system responsible for calculating the shipping price for each available [Shipping Method](shipping-methods.md).
+A Calculator is the component of the Spree shipping system responsible for calculating the shipping price for each available [Shipping Method](shipping-methods).
 
 Spree ships with 5 default calculators:
 
-* [Flat rate \(per order\)](calculators.md#flat-rate-per-order)
-* [Flat rate \(per item\)](calculators.md#flat-rate-per-item)
-* [Flat percent](calculators.md#flat-percent)
-* [Flexible rate](calculators.md#flexible-rate)
-* [Price sack](calculators.md#price-sack)
+* [Flat rate \(per order\)](calculators#flat-rate-per-order)
+* [Flat rate \(per item\)](calculators#flat-rate-per-item)
+* [Flat percent](calculators#flat-percent)
+* [Flexible rate](calculators#flexible-rate)
+* [Price sack](calculators#price-sack)
 
-#### [Flat Rate \(per order\)](calculators.md#flat-rate-per-order) <a id="flat-rate-per-order"></a>
+#### [Flat Rate \(per order\)](calculators#flat-rate-per-order) <a id="flat-rate-per-order"></a>
 
 The Flat Rate \(per order\) calculator allows you to charge the same shipping price per order regardless of the number of items in the order. You define the flat rate charged per order at the shipping method level.
 
 For example, if you have two shipping methods defined for your store \(“UPS 1-Day” and “UPS 2-Day”\), and have selected “Flat rate” as the calculator type for each, you could charge a $15 flat rate shipping cost for the UPS 1-Day orders and a $10 flat rate shipping cost for the UPS 2-Day orders.
 
-#### [Flat Rate \(per item\)](calculators.md#flat-rate-per-item) <a id="flat-rate-per-item"></a>
+#### [Flat Rate \(per item\)](calculators#flat-rate-per-item) <a id="flat-rate-per-item"></a>
 
 The Flat Rate \(per item/product\) calculator allows you to determine the shipping costs based on the number of items in the order.
 
 For example, if there are 4 items in an order and the flat rate per item amount is set to $10, then the total shipping costs for the order would be $40.
 
-#### [Flat Percent](calculators.md#flat-percent) <a id="flat-percent"></a>
+#### [Flat Percent](calculators#flat-percent) <a id="flat-percent"></a>
 
 The Flat Percent calculator allows you to calculate shipping costs as a percent of the total amount charged for the order. The amount is calculated as follows:
 
@@ -32,7 +32,7 @@ The Flat Percent calculator allows you to calculate shipping costs as a percent 
 
 For example, if an order had an item total of $31 and the calculator was configured to have a flat percent amount of 10, the shipping cost would be $3.10, because $31 x 10% = $3.10.
 
-#### [Flexible Rate](calculators.md#flexible-rate) <a id="flexible-rate"></a>
+#### [Flexible Rate](calculators#flexible-rate) <a id="flexible-rate"></a>
 
 The Flexible Rate calculator is typically used for promotional discounts when you want to give a specific discount for the first product, and then subsequent discounts for other products, up to a certain amount.
 
@@ -45,7 +45,7 @@ The Flexible Rate calculator takes four inputs:
 
 For example, if you set First Item Cost to $10, Additional Item Cost to $5, and Max Items to 4, you could be charging $10 for the first item, $5 for the next 3 items, and $0 for items beyond the first 4. Thus, an order with 1 item would have a shipping cost of $10. An order with two items would cost $15 to ship, and an order of 7 items would cost $25 to ship.
 
-#### [Price Sack](calculators.md#price-sack) <a id="price-sack"></a>
+#### [Price Sack](calculators#price-sack) <a id="price-sack"></a>
 
 The Price Sack calculator is a way to offer discount shipping to orders over a certain dollar amount. The Price Sack calculator takes four inputs:
 
@@ -64,11 +64,11 @@ For example, suppose you create a shipping calculator with these settings:
 
 A customer whose order subtotal equals $35 would be offered a shipping cost of $15 using this shipping method. A different customer whose order subtotal equals $55 would be offered a shipping cost of only $5.
 
-#### [Custom Calculators](calculators.md#custom-calculators) <a id="custom-calculators"></a>
+#### [Custom Calculators](calculators#custom-calculators) <a id="custom-calculators"></a>
 
 You can define your own calculator if you have more complex needs. In that case, check out the [Calculators Guide](https://developer/internals/calculators).
 
-### [Next Step](calculators.md#next-step) <a id="next-step"></a>
+### [Next Step](calculators#next-step) <a id="next-step"></a>
 
-If you have followed this guide series from the beginning, your store is now furnished with [shipping categories](shipping-categories.md), [geographical shipping zones](zones.md), and calculators. The final step is to pull it all together into [shipping methods](shipping-methods.md), from which your customers can choose at checkout.
+If you have followed this guide series from the beginning, your store is now furnished with [shipping categories](shipping-categories), [geographical shipping zones](zones), and calculators. The final step is to pull it all together into [shipping methods](shipping-methods), from which your customers can choose at checkout.
 
