--- a/docs/user-guide/users/creating-a-new-user.mdx
+++ b/docs/user-guide/users/creating-a-new-user.mdx
@@ -1,6 +1,6 @@
 # Creating a New User
 
-### [Introduction](creating-a-new-user.md#introduction) <a id="introduction"></a>
+### [Introduction](creating-a-new-user#introduction) <a id="introduction"></a>
 
 To create a new user for your store, go into the Admin Interface, click the **Users** tab, and click the **New User button**.
 
@@ -10,7 +10,7 @@ There are three mandatory fields \(“Email”, “Password”, and “Password 
 
 ![Add new User](https://guides.spreecommerce.org/static/b60f4109b2e263f63985024dabce0f7e/03ffe/add_new_user.jpg)
 
-### [Editing existing user](creating-a-new-user.md#editing-existing-user) <a id="editing-existing-user"></a>
+### [Editing existing user](creating-a-new-user#editing-existing-user) <a id="editing-existing-user"></a>
 
-Once you have created an account, you are redirected to a User editing page which you can find out more about [here](editing-users.md).
+Once you have created an account, you are redirected to a User editing page which you can find out more about [here](editing-users).
 
